# VAIC2026

./: .env.example  .env.v2.example  .flutter-plugins-dependencies  .gitignore  AGENTS.md  AI_LOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SHB_Corporate_Opportunity_OS_Investor_Blueprint.odt  SHB_Corporate_Opportunity_OS_Investor_Blueprint_VI.odt  SHB_Corporate_RAG_Product_Manual_Public_Source_2026.odt  design.md  docker-compose.yml  extract.py  extracted_doc.txt  mock tờ trinh đề xuất của khách hàng.docx  pubspec.yaml  pytest.ini  read_docx_v3.ps1  requirements-optional.txt  requirements.txt  run_demo_intent.py  run_mock_demo.cmd  run_mock_demo.ps1  run_rag_mcp.cmd  run_rag_mcp.ps1  session-ses_0906.md  sql_entity.md  wrangler.toml
00-company/: flow_corp-001_bottom-up-influence_v1.0_2026-07-18.md  policy_corp-001_works-council_v1.0_2026-07-18.md  policy_corp-002_anti-retaliation_v1.0_2026-07-18.md  sop_corp-001_whistleblower-process_v1.0_2026-07-18.md  sop_corp-002_veto-process_v1.0_2026-07-18.md
VAIC2026_frontend_demo/: README_DEMO.md  form_yeu_cau_tin_dung.html
app/: __init__.py  auth.py  config.py  database.py  main.py
benchmarks/: metrics.py  retrieval_metrics.py  run.py  run_performance_benchmark.py  run_retrieval_benchmark.py
deploy/: deploy_product_agent.sh  shb-product-agent.service
docs/: AI_Agent_RAG_Study_Guide.md  AI_DECISION_LOG.md  AI_IDE_STARTUP_PROMPT.md  BUILD_V2_LOG.md  (+39 more)
mcp_common/: __init__.py  config.py  llm_client.py  pyproject.toml  requirements.txt  schemas.py
mcp_common/mcp_common.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+790 files in other folders)
